# Language-AI-Assistant

./: .gitignore  pyproject.toml
src/lexilearn/: main.py
